# sphere12d

./: CMakeLists.txt  LICENSE  README.md  circle.cpp  randomGenerator.cpp  randomGenerator.h  simple.cpp  smart.cpp  sphere.cpp
